--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.33.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +52,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
+    "motion": "^12.12.1",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
