--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
-    "motion": "^12.12.1",
+    "motion": "^12.12.2",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "react-image-lightbox": "^5.1.4",
     "react-resizable-panels": "^3.0.2",
